...
"NULL_ANSWER" = "Select an answer";
"PLACEHOLDER_IMAGE_CHOICES" = "Tap to select";
"PLACEHOLDER_LONG_TEXT" = "Tap to write";

/* Button titles */
"BUTTON_AGREE" = "Agree";
"BUTTON_CANCEL" = "Cancel";
"BUTTON_OK" = "OK";
"BUTTON_CLEAR" = "Clear";
"BUTTON_CLEAR_SIGNATURE" = "Clear Signature";
"BUTTON_APPLY" = "Apply";
"BUTTON_DISAGREE" = "Disagree";
"BUTTON_DONE" = "Done";
"BUTTON_GET_STARTED" = "Get Started";
"BUTTON_LEARN_MORE" = "Learn More";
"BUTTON_NEXT" = "Next";
"BUTTON_SKIP" = "Skip";
"BUTTON_SKIP_QUESTION" = "Skip This Question";
"BUTTON_START_TIMER" = "Start Timer";
"BUTTON_OPTION_SAVE" = "Save for Later";
"BUTTON_OPTION_DISCARD" = "Discard Results";
"BUTTON_OPTION_STOP_TASK" = "End Task";
"BUTTON_SAVE" = "Save";
"BUTTON_CLEAR_ANSWER" = "Clear Answer";
"BUTTON_READ_ONLY_MODE" = "This Answer Cannot Be Modified.";
"BUTTON_COPYRIGHT" = "Copyright";
"BUTTON_CLOSE" = "Close";
"BUTTON_START_TEST" = "Start Test";
...
"REACTION_TIME_TASK_ATTEMPTS_FORMAT" = "Attempt %@ of %@";
"REACTION_TIME_TASK_ACTIVE_STEP_TITLE" = "Quickly shake the device when the blue circle appears";
"REACTION_TIME_NORMALIZED_TASK_ACTIVE_STEP_TITLE" = "Tap the hold button, and then the blue circle";
"REACTION_TIME_TASK_NORM_BUTTON_TITLE" = "hold";

/* Stroop active task.*/
"STROOP_TASK_TITLE" = "Stroop";
"STROOP_TASK_INTRO1_DETAIL_TEXT" = "Every time a word appears, select the first letter of the name of the COLOR that is shown.";
"STROOP_TASK_INTRO2_DETAIL_TEXT" = "When you are ready to begin the Stroop activity tap Get Started.";
"STROOP_TASK_STEP_TEXT" = "Select the first letter of the name of the COLOR that is shown.";
"STROOP_COLOR_RED" = "RED";
"STROOP_COLOR_GREEN" = "GREEN";
"STROOP_COLOR_BLUE" = "BLUE";
"STROOP_COLOR_YELLOW" = "YELLOW";
"STROOP_COLOR_ORANGE" = "ORANGE";
"STROOP_COLOR_BROWN" = "BROWN";
...
